--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-expand-animated": "^1.0.2",
     "react-owl-carousel": "^2.3.3",
     "react-owl-carousel3": "^2.2.5",
     "react-phone-input-2": "^2.14.0",
