--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-owl-carousel": "^2.3.3",
     "react-owl-carousel3": "^2.2.5",
     "react-phone-input-2": "^2.14.0",
+    "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
